--- a/config/config.json
+++ b/config/config.json
@@ -10,15 +10,12 @@
   "test": {
     "username": "root",
     "password": "root",
-    "database": "database_test",
+    "database": "saddle",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "root",
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "use_env_variable": "JawsDB_URL",
     "dialect": "mysql"
   }
 }
