--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,6 +15,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/cristinadefoe/Saddle-this/issues"
+  },
+  "engines": {
+    "node": "10.1.0"
   },
   "homepage": "https://github.com/cristinadefoe/Saddle-this#readme",
   "dependencies": {
